# youbox-agent-desktop

./: .env.example  .gitignore  Makefile  NOTICE  README.md  bunfig.toml  package.json  tsconfig.base.json
website/: AGENTS.md  Cargo.toml  website.toml.example
website/content/: changelog.md  faq.md  getting-started.md  index.md
website/content/guide/: cowork.md  memory.md  models.md  overview.md  skills.md  tasks.md  workspace.md
website/src/: auth.rs  config.rs  db.rs  error.rs  main.rs
website/src/models/: audit.rs  auth_session.rs  feedback.rs  game.rs  invite.rs  mod.rs  provider.rs  release.rs  session.rs  skill.rs  user.rs
website/src/routes/: chat.rs  desktop_release.rs  docs.rs  feedback.rs  games.rs  mod.rs  pages.rs  update.rs
website/src/routes/admin/: audit.rs  bots.rs  logs.rs  (+11 more)
website/src/services/: changelog.rs  docs.rs  gateway.rs  mod.rs
website/static/chat/: chat.js  index.html
website/static/css/: style.css
website/static/js/: app.js  chat.js
website/templates/: base.html  chat.html  feedback.html  login.html
website/templates/admin/: audit.html  bots.html  config_center.html  containers.html  dashboard.html  feedback_list.html  invites.html  layout.html  login.html  logs.html  operations.html  providers.html  release_edit.html  releases.html  runtime.html  settings.html  skill_edit.html  skills.html  user_detail.html  users.html
website/templates/docs/: index.html  layout.html
website/templates/games/: gallery.html  play.html
website/templates/pages/: about.html  download.html  index.html
website/tests/: smoke_routes.rs
(+452 files in other folders)
