[package]
name = "jacoworks-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
askama = "=0.12.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-cookies = "0.11"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.16"
urlencoding = "2"
rand = "0.8"
